<resources>
    <string name="app_name">chalonApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="go_selections">"Ir a ver tratamientos"</string>
    <string name="login_label">Iniciar sesión</string>
    <string name="loginbutton_label">Ingresar</string>
    <string name="register_label">Aún no tienes cuenta? Registrate</string>
    <string name="google_label">Ingresar con Google</string>
    <string name="userlogin_label">Regístrate</string>

    <!-- Strings related to new user login -->
    <string name="name_label">Nombre</string>
    <string name="sname_label">Apellido</string>
    <string name="registeruser_label">Registrar</string>
    <string name="return_label">Volver</string>
    <string name="wrong_mail">Correo electrónico inválido</string>
    <string name="wrong_pass">Contraseña inválida</string>

    <!-- Strings related to dashboard -->
    <string name="fireaccount_label">Cerrar cuenta firebase</string>
    <string name="googleaccount_label">Cerrar cuenta google</string>
    <string name="deletegoogle_label">Eliminar cuenta google</string>

    <!-- Strings related to ListViewForEveryTratamiento-->
    <string name="reservar">"Agendar"</string>
    <string name="DefaultValue">"Tratamiento"</string>
    <string name="DefaultValue2">"Precio"</string>

    <!-- Strings related to Activity Seleccion de Tratamiento-->
    <string name="tratamientos">"Tratamientos"</string>

    <!-- Strings related to Activity Reserva de Tratamiento-->
    <string name="AgendarCita">"Agendar cita"</string>
    <string name="aceptar_re">Agendar</string>

    <string name="nombre">Nombre:</string>
    <string name="tratamiento">Tratamiento:</string>
    <string name="fecha">Seleccione fecha:</string>
    <string name="hora">Seleccione hora:</string>
    <string name="precio">Precio:</string>
    <string name="ejemFecha">Elegir...</string>

    <!-- Strings related to HistoryActivity-->
    <string name="reporte">"Reporte de citas"</string>
    <string name="history">"Historial"</string>
    <string name="user">"Nombre:"</string>
    <string name="totalCitas">"Citas Registradas:"</string>
    <string name="userExample">"Chantell Alvarenga"</string>
    <string name="totalCitasExample">"12"</string>

</resources>