<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity_reserva">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTratamientos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="8dp"
            android:fontFamily="cursive"
            android:text="@string/AgendarCita"
            android:textColor="#841E42"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="72dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="#40E89F91"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="@string/nombre"
                    android:textColor="#841E42"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvActualUserName"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/nombre"
                    android:textAlignment="center"
                    android:textColor="#0E0D0D"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTratamientoLbl"
                    android:layout_width="94dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="@string/tratamiento"
                    android:textColor="#841E42"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTratamientoElegido"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/tratamientos"
                    android:textAlignment="center"
                    android:textColor="#0E0D0D"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrecioLbl"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="@string/precio"
                    android:textColor="#841E42"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrecioTratamiento"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/precio"
                    android:textAlignment="center"
                    android:textColor="#0E0D0D"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:layout_editor_absoluteY="731dp">

                <TextView
                    android:id="@+id/tvFechaLbl"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="@string/fecha"
                    android:textColor="#841E42"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSetFecha"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/ejemFecha"
                    android:textAlignment="center"
                    android:textColor="#0E0D0D"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHoraLbl"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:text="@string/hora"
                    android:textColor="#841E42"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnAgendarCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="10dp"
            android:background="#67E89F91"
            android:onClick="AgendarCita"
            android:text="@string/aceptar_re"
            android:textAllCaps="false"
            android:textColor="#841E42"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>