<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvReporteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="8dp"
            android:fontFamily="cursive"
            android:text="@string/reporte"
            android:textColor="#841E42"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="72dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="#40E89F91">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="104dp"
                    android:layout_height="116dp"
                    android:background="@drawable/logo_history"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvUserNameHistory"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.555"
                    app:srcCompat="@drawable/logo_history"
                    tools:srcCompat="@drawable/logo_history" />

                <TextView
                    android:id="@+id/tvUserNameHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/user"
                    android:textAlignment="center"
                    android:textColor="#1C1616"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tvTotalCitas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.387"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalCitasValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/totalCitasExample"
                    android:textAlignment="center"
                    android:textColor="#1C1616"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvTotalCitas"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserNameValue" />

                <TextView
                    android:id="@+id/tvUserNameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/userExample"
                    android:textAlignment="center"
                    android:textColor="#1C1616"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvUserNameHistory"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalCitas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="47dp"
                    android:text="@string/totalCitas"
                    android:textAlignment="center"
                    android:textColor="#1C1616"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.537"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserNameHistory" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="531dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>